NetBSD Problem Report #47985

From reinoud@heethoofdje.13thmonkey.org  Wed Jul  3 09:41:34 2013
Return-Path: <reinoud@heethoofdje.13thmonkey.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 0D86E71834
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  3 Jul 2013 09:41:34 +0000 (UTC)
Message-Id: <20130703094136.BFAA3281936B@heethoofdje.13thmonkey.org>
Date: Wed,  3 Jul 2013 11:41:36 +0200 (CEST)
From: reinoud@NetBSD.org
Reply-To: reinoud@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: udf_shrinkfile test fails
X-Send-Pr-Version: 3.95

>Number:         47985
>Category:       kern
>Synopsis:       udf_shrinkfile test fails
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    reinoud
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jul 03 09:45:00 +0000 2013
>Closed-Date:    Wed Jul 03 11:52:55 +0000 2013
>Last-Modified:  Wed Jul 03 14:27:43 +0000 2013
>Originator:     Reinoud Zandijk
>Release:        NetBSD 6.99.23
>Organization:
NetBSD

>Environment:


>Description:

See test output 
----
Test case: fs/vfs/t_io/udf_shrinkfile

Duration: 3.044925 seconds
Termination reason

FAILED: Test program received signal 6 (core dumped)
Standard output stream

WARNING: ZFS on NetBSD is under development
panic: kernel diagnostic assertion "vp->v_size == vp->v_writesize || newsize
== vp->v_writesize || newsize <= vp->v_size" failed: file
"/tmp/bracket/build/2013.07.02.22.39.45-amd64/src/lib/librumpvfs/../../sys/rump/../uvm/uvm_vnode.c",
line 352 
rump kernel halting...
halted

Standard error stream
....
Core was generated by `t_io'.
Program terminated with signal 6, Aborted.
#0  0x00007f7ff090b36a in _lwp_kill () from /usr/lib/libc.so.12
#0  0x00007f7ff090b36a in _lwp_kill () from /usr/lib/libc.so.12
#1  0x00007f7ff090afd2 in abort () from /usr/lib/libc.so.12
#2  0x00007f7ff280813b in rumpuser_exit () from /usr/lib/librumpuser.so.0
#3  0x00007f7ff2c8a2bc in rumpns_cpu_reboot () from /usr/lib/librump.so.0
#4  0x00007f7ff2c5f1ce in rumpns_vpanic () from /usr/lib/librump.so.0
#5  0x00007f7ff2c470c6 in rumpns_kern_assert () from /usr/lib/librump.so.0
#6  0x00007f7ff302b8cf in rumpns_uvm_vnp_setsize () from
/usr/lib/librumpvfs.so.0
#7  0x00007f7ff5412cb2 in rumpns_udf_shrink_node () from
/usr/lib/librumpfs_udf.so.0
#8  0x00007f7ff540ba28 in rumpns_udf_chsize () from
/usr/lib/librumpfs_udf.so.0
#9  0x00007f7ff540bb8b in rumpns_udf_setattr () from
/usr/lib/librumpfs_udf.so.0
#10 0x00007f7ff2c51ebe in rumpns_VOP_SETATTR () from /usr/lib/librump.so.0
#11 0x00007f7ff3036390 in rumpns_sys_ftruncate () from
/usr/lib/librumpvfs.so.0
#12 0x00007f7ff2c82039 in ?? () from /usr/lib/librump.so.0
#13 0x00007f7ff2c83f76 in rump___sysimpl_ftruncate () from
/usr/lib/librump.so.0
#14 0x000000000040a2f2 in shrinkfile.clone.0 ()
#15 0x000000000040ae4e in atfu_udf_shrinkfile_body ()
#16 0x00007f7ff100a39a in atf_tc_run () from /usr/lib/libatf-c.so.0
#17 0x00007f7ff1006e7b in atf_tp_main () from /usr/lib/libatf-c.so.0
#18 0x0000000000406352 in ___start ()
...
Stack trace complete

----

>How-To-Repeat:

>Fix:
Most likely the code forgets to set one of variables reffered in the panic by
obmitting either a call or not explicitly setting it.



>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->reinoud
Responsible-Changed-By: reinoud@NetBSD.org
Responsible-Changed-When: Wed, 03 Jul 2013 09:57:59 +0000
Responsible-Changed-Why:
Taking it


State-Changed-From-To: open->closed
State-Changed-By: reinoud@NetBSD.org
State-Changed-When: Wed, 03 Jul 2013 11:52:55 +0000
State-Changed-Why:
Fixed by commit to udf_allocation where internally recorded data in the (E)FE wasn't grown correctly


From: "Reinoud Zandijk" <reinoud@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47985 CVS commit: src/sys/fs/udf
Date: Wed, 3 Jul 2013 11:50:59 +0000

 Module Name:	src
 Committed By:	reinoud
 Date:		Wed Jul  3 11:50:59 UTC 2013

 Modified Files:
 	src/sys/fs/udf: udf_allocation.c

 Log Message:
 On growing a node that was recorded inside the (E)FE, don't forget to set the
 size of the node to the NEW size. This was reported by the `t_io
 udf_shrinkfile' testcase.

 Fixes PR kern/47985


 To generate a diff of this commit:
 cvs rdiff -u -r1.32 -r1.33 src/sys/fs/udf/udf_allocation.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.