On growing a node that was recorded inside the (E)FE, don't forget to set the size of the node to the NEW size. This was reported by the `t_io udf_shrinkfile' testcase.

Fixes PR kern/47985